load csv and geopackage

--- a/code-draft.ipynb
+++ b/code-draft.ipynb
@@ -2,8 +2,179 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f2ea5253-b07c-4416-bff6-155e0179bfa0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import geopandas as gpd\n",
+    "import matplotlib.cm as cm\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import matplotlib\n",
+    "import matplotlib.font_manager"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4b221074-d980-48bf-97d5-f5868f9c1eae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#缓存（cache）装饰器\n",
+    "from requests import get\n",
+    "from functools import wraps\n",
+    "\n",
+    "def check_cache(f):\n",
+    "    @wraps(f)\n",
+    "    def wrapper(src:str, dst:str, min_size=100) -> Path:\n",
+    "        url = Path(src) \n",
+    "        fn  = url.name  \n",
+    "        dsn = Path(f\"{dst}/{fn}\") \n",
+    "        if dsn.is_file() and dsn.stat().st_size > min_size:\n",
+    "            print(f\"+ {dsn} found locally!\")\n",
+    "            return(dsn)\n",
+    "        else:\n",
+    "            print(f\"+ {dsn} not found, downloading!\")\n",
+    "            return(f(src, dsn))\n",
+    "    return wrapper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "472d89d2-c663-44ec-8fef-429225d9aad9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#下载函数\n",
+    "@check_cache\n",
+    "def cache_data(src:Path, dst:Path) -> str:\n",
+    "    \"\"\"Downloads a remote file.\n",
+    "    Returns\n",
+    "    -------\n",
+    "    str\n",
+    "        A string representing the local location of the file.\n",
+    "    \"\"\"\n",
+    "      \n",
+    "    # Create...\n",
+    "    if not dst.parent.exists():\n",
+    "        dst.parent.mkdir(parents=True, exist_ok=True)\n",
+    "        \n",
+    "    # Download and write the file\n",
+    "    with dst.open(mode='wb') as file:\n",
+    "        response = get(src)\n",
+    "        file.write(response.content)\n",
+    "        \n",
+    "    print(' + Done downloading...')\n",
+    "\n",
+    "    return dst.resolve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "743c9a6a-5486-4d61-b2e5-23d0893dcf15",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function cache_data in module __main__:\n",
+      "\n",
+      "cache_data(src: pathlib.Path, dst: pathlib.Path) -> str\n",
+      "    Downloads a remote file.\n",
+      "    Returns\n",
+      "    -------\n",
+      "    str\n",
+      "        A string representing the local location of the file.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(cache_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d73e469e-1fd7-45a8-8892-e6fb2693ab6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+ /home/jovyan/work/The-Universe-s-Premier-F/data/geo/Boroughs.gpkg?raw=true not found, downloading!\n",
+      " + Done downloading...\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.12/site-packages/pyogrio/raw.py:198: RuntimeWarning: File /home/jovyan/work/The-Universe-s-Premier-F/data/geo/Boroughs.gpkg?raw=true has GPKG application_id, but non conformant file extension\n",
+      "  return ogr_read(\n"
+     ]
+    }
+   ],
+   "source": [
+    "#下载/读取地理数据\n",
+    "ddir  = Path('data/geo')\n",
+    "spath = 'https://github.com/jreades/fsds/blob/master/data/src/' # source path\n",
+    "\n",
+    "boros = gpd.read_file( cache_data(spath + 'Boroughs.gpkg?raw=true', ddir.resolve()) )\n",
+    "\n",
+    "print('Done.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "2b3c185e-f64a-4c9b-adeb-a6ef30287176",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://raw.githubusercontent.com/yjzhou217/The-Universe-s-Premier-F/main/20250615-London-listings.csv.gz\n",
+      "+ /home/jovyan/work/The-Universe-s-Premier-F/data/raw/20250615-London-listings.csv.gz found locally!\n",
+      "Data frame is 96,651 x 79\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Input: date + city\n",
+    "ymd  = '20250615'\n",
+    "city = 'London'\n",
+    "host = \"https://raw.githubusercontent.com\"\n",
+    "repo = \"yjzhou217/The-Universe-s-Premier-F/main\"\n",
+    "\n",
+    "url  = f\"{host}/{repo}/{ymd}-{city}-listings.csv.gz\"\n",
+    "print(url)\n",
+    "\n",
+    "# 创建 data/raw 文件夹\n",
+    "Path(\"data/raw\").mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "# load csv\n",
+    "file_path = cache_data(url, Path(\"data/raw\").resolve())\n",
+    "\n",
+    "df = pd.read_csv(file_path, compression=\"gzip\", low_memory=False)\n",
+    "print(f\"Data frame is {df.shape[0]:,} x {df.shape[1]}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1f3cdd1-6a94-4497-ba36-9347d9f6655c",
    "metadata": {},
    "outputs": [],
    "source": []
