GeoDataFrame and geo parquet

--- a/code-draft.ipynb
+++ b/code-draft.ipynb
@@ -789,7 +789,7 @@
     "from pathlib import Path\n",
     "\n",
     "# 输出文件路径\n",
-    "csv_out = Path(f\"data/clean/{file_path.name}\")  # file_path.name 替代 path.name\n",
+    "csv_out = Path(f\"data/clean/{file_path.name}\") \n",
     "pq_out  = Path(f\"data/clean/{file_path.name.replace('.csv.gz','.parquet')}\")\n",
     "\n",
     "# 创建文件夹（如果不存在）\n",
@@ -807,16 +807,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "96cd9287-572d-46e8-a0ca-f0865267f716",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data frame is 96,639 x 76\n"
+     ]
+    }
+   ],
+   "source": [
+    "#导入clean完的Parquet\n",
+    "parquet_path = Path(\"data/clean\") / file_path.name.replace(\".csv.gz\", \".parquet\")\n",
+    "df = pd.read_parquet(parquet_path)\n",
+    "print(f\"Data frame is {df.shape[0]:,} x {df.shape[1]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "0fd1b34e-c3d2-4864-9e18-0c685b9d7348",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#从 DataFrame 创建 GeoDataFrame（把 lon/lat 转为 geometry）\n",
+    "gdf = gpd.GeoDataFrame(df,\n",
+    "      geometry=gpd.points_from_xy(df.longitude, df.latitude, crs='epsg:4326'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "c8b44822-77ba-4209-92d3-3856da7c85cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'geopandas.geodataframe.GeoDataFrame'>\n",
+      "<class 'geopandas.geoseries.GeoSeries'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1    POINT (-0.01997 51.44284)\n",
+       "2    POINT (-0.02275 51.44359)\n",
+       "3    POINT (-0.02309 51.44355)\n",
+       "4    POINT (-0.02307 51.44333)\n",
+       "Name: geometry, dtype: geometry"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#保存 geo parquet\n",
+    "gdf.to_parquet(Path(f'data/geo/{ymd}-{city}-listings.geoparquet').resolve())\n",
+    "print(type(gdf))\n",
+    "print(type(gdf.geometry))\n",
+    "gdf.geometry.iloc[1:5]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fd1b34e-c3d2-4864-9e18-0c685b9d7348",
+   "id": "5c933eb3-1e82-42a7-a242-433a2ad2544f",
    "metadata": {},
    "outputs": [],
    "source": []
