--- a/code-draft.ipynb
+++ b/code-draft.ipynb
@@ -32,9 +32,12 @@
     "def check_cache(f):\n",
     "    @wraps(f)\n",
     "    def wrapper(src:str, dst:str, min_size=100) -> Path:\n",
-    "        url = Path(src) \n",
-    "        fn  = url.name  \n",
-    "        dsn = Path(f\"{dst}/{fn}\") \n",
+    "        if src.find('?') == -1:\n",
+    "            url = Path(src)\n",
+    "        else:\n",
+    "            url = Path(src[:src.find('?')])\n",
+    "        fn  = url.name  # Extract the filename\n",
+    "        dsn = Path(f\"{dst}/{fn}\") # Destination filename\n",
     "        if dsn.is_file() and dsn.stat().st_size > min_size:\n",
     "            print(f\"+ {dsn} found locally!\")\n",
     "            return(dsn)\n",
@@ -55,13 +58,31 @@
     "@check_cache\n",
     "def cache_data(src:Path, dst:Path) -> str:\n",
     "    \"\"\"Downloads a remote file.\n",
+    "    \n",
+    "    The function sits between the 'read' step of a pandas or geopandas\n",
+    "    data frame and downloading the file from a remote location. The idea\n",
+    "    is that it will save it locally so that you don't need to remember to\n",
+    "    do so yourself. Subsequent re-reads of the file will return instantly\n",
+    "    rather than downloading the entire file for a second or n-th itme.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    src : str\n",
+    "        The remote *source* for the file, any valid URL should work.\n",
+    "    dst : str\n",
+    "        The *destination* location to save the downloaded file.\n",
+    "        \n",
     "    Returns\n",
     "    -------\n",
     "    str\n",
     "        A string representing the local location of the file.\n",
     "    \"\"\"\n",
     "      \n",
-    "    # Create...\n",
+    "    # Create any missing directories in dest(ination) path\n",
+    "    # -- os.path.join is the reverse of split (as you saw above)\n",
+    "    # but it doesn't work with lists... so I had to google how\n",
+    "    # to use the 'splat' operator! os.makedirs creates missing\n",
+    "    # directories in a path automatically.\n",
     "    if not dst.parent.exists():\n",
     "        dst.parent.mkdir(parents=True, exist_ok=True)\n",
     "        \n",
@@ -89,6 +110,20 @@
       "\n",
       "cache_data(src: pathlib.Path, dst: pathlib.Path) -> str\n",
       "    Downloads a remote file.\n",
+      "\n",
+      "    The function sits between the 'read' step of a pandas or geopandas\n",
+      "    data frame and downloading the file from a remote location. The idea\n",
+      "    is that it will save it locally so that you don't need to remember to\n",
+      "    do so yourself. Subsequent re-reads of the file will return instantly\n",
+      "    rather than downloading the entire file for a second or n-th itme.\n",
+      "\n",
+      "    Parameters\n",
+      "    ----------\n",
+      "    src : str\n",
+      "        The remote *source* for the file, any valid URL should work.\n",
+      "    dst : str\n",
+      "        The *destination* location to save the downloaded file.\n",
+      "\n",
       "    Returns\n",
       "    -------\n",
       "    str\n",
@@ -111,16 +146,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+ /home/jovyan/work/The-Universe-s-Premier-F/data/geo/Boroughs.gpkg?raw=true found locally!\n",
+      "+ /home/jovyan/work/The-Universe-s-Premier-F/data/geo/Boroughs.gpkg not found, downloading!\n",
+      " + Done downloading...\n",
       "Done.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.12/site-packages/pyogrio/raw.py:198: RuntimeWarning: File /home/jovyan/work/The-Universe-s-Premier-F/data/geo/Boroughs.gpkg?raw=true has GPKG application_id, but non conformant file extension\n",
-      "  return ogr_read(\n"
      ]
     }
    ],
@@ -605,7 +633,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_117675/1744722621.py:22: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/tmp/ipykernel_145819/1744722621.py:22: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df[col] = df[col].replace({'t': True, 'f': False}).astype(bool)\n"
      ]
     }
