Reprojecting the Data

--- a/code-draft.ipynb
+++ b/code-draft.ipynb
@@ -905,8 +905,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "5c933eb3-1e82-42a7-a242-433a2ad2544f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EPSG:27700\n",
+      "epsg:4326\n"
+     ]
+    }
+   ],
+   "source": [
+    "#检查crs\n",
+    "for g in [boros, gdf]:\n",
+    "    print(g.crs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "ca98d51b-5672-4114-93fe-af8d116bf295",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epsg:27700\n",
+      "[504186.07291139 156900.42075072 558044.54194941 200027.74372136]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#重投影\n",
+    "gdf = gdf.to_crs('epsg:27700') \n",
+    "print(gdf.geometry.crs)\n",
+    "print(gdf.total_bounds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "baaf21a6-61de-40d8-990c-06a430407691",
    "metadata": {},
    "outputs": [],
    "source": []
