--- a/draft_question2.ipynb
+++ b/draft_question2.ipynb
@@ -1301,7 +1301,7 @@
     "    .reset_index(name=\"num_neighs\")\n",
     ")\n",
     "\n",
-    "host_area_count[\"is_cross_borough\"] = host_area_count[\"num_neighs\"] > 1\n"
+    "host_area_count[\"is_cross_borough\"] = host_area_count[\"num_neighs\"] > 1"
    ]
   },
   {
@@ -1488,7 +1488,12 @@
    "cell_type": "code",
    "execution_count": 37,
    "id": "b8b29510-a30c-4104-9fd0-588c88b7827d",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1571,7 +1576,7 @@
     }
    ],
    "source": [
-    "print(boroughs.columns)\n"
+    "print(boroughs.columns)"
    ]
   },
   {
